kubernetes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-end-proxy
  namespace: otel-demo
spec:
  port:
    targetPort: tcp-service
  tls:
    termination: edge
  to:
    kind: Service
    name: frontend-proxy
    weight: 100
  wildcardPolicy: None
